# EarthExplorer_pi

./: CMakeLists.txt  EarthExplorer_pi.camera.fbp  EarthExplorer_pi.fbp  EarthExplorer_pi.no.camera.fbp  Plugin.cmake  README.md
cmake/: TemplateVersion
data/: container.dae  link.kml  myRoute.gpx  panama_canal.gpx  rtz.gpx
flatpak/: org.opencpn.OpenCPN.Plugin.EarthExplorer.yaml
manual/: antora.yml  site.yml
manual/modules/ROOT/pages/: index.adoc
src/: AisMaker.cpp  EarthExplorer_pi.cpp  EarthExplorer_pi.h  EarthExplorergui.cpp  EarthExplorergui.h  EarthExplorergui_impl.cpp  EarthExplorergui_impl.h  icons.cpp  icons.h
